--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,9 @@
     "solid-element#build": {
       "dependsOn": ["solid-js#types", "solid-js#link"]
     },
+    "sloid#build": {
+      "dependsOn": ["solid-js#types", "solid-js#link"]
+    },
     "solid-js#types": {
       "dependsOn": ["^types"],
       "outputs": ["types/**", "**/types/**"]
